--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: navy;
+}
+
+p{
+  font-size: 50px;
+  text-align: center;
+}
+
+img{
+  width: 200px;
+}
+
+div{
+  text-align: center;
+}
